Replace super-csv by apache commons-csv
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>